--- a/notebook/notebook/notebook.csproj
+++ b/notebook/notebook/notebook.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DatabaseService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Note.cs" />
+    <Compile Include="NoteActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -102,6 +103,11 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\CustomRow.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\activity_note.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
